--- a/experiment/quadmods.html
+++ b/experiment/quadmods.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Geometry yes or no questions</title>
+    <title>Geometry - yes or no</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -89,20 +89,21 @@
 
 
     <div class = "slide" id = "final_questions">
+    <center> Please answer the top question. The remaining questions are optional. <br> <br>
       <p class="block-text">
-        What was this survey about? : <br>
+        What was this survey about? <br>
         <input type="text" id="about" name="about" size="70"> 
       </p>
       <p class="block-text" name="comments" >
-        Any other comments for us? : <br>
+        Any other comments for us? <br>
         <input type="text" id="comments" name="comments" size="70"> 
       </p>
       <p class="block-text" name="age" >
-        How old are you? (optional): <br>
+        How old are you? <br>
         <input type="text" id="age" name="age" size="70"> 
       </p>
       <p class="block-text" name="gender" >
-        What is your gender? (m = male, f = female, o = other; optional): <br>
+        What is your gender? (m = male, f = female, o = other) <br>
         <input type="text" id="gender" name="gender" size="70"> 
       </p>
       <table align="center"><tr><td align="center">
